Add login and hf proto
